# f1tenth_dawgs

./: .gitignore  CLAUDE.md  README.md  cyclonedds_jetson.xml  launch_with_dds.sh
claudedocs/: ACCELERATION_LIMITING_IMPLEMENTATION.md  ADVANCED_PATH_TRACKER.md  FRENET_PATH_VELOCITY_VISUALIZATION.md  QOS_POLICY_GUIDE.md  SAFETY_DISTANCE_IMPROVEMENTS.md
config/: README.md
data/: README.md
data/calibration/: erpm_calibration_data_20250926_232234.csv  erpm_calibration_data_20250927_233512.csv  erpm_calibration_data_20250928_221041.csv  erpm_calibration_results_20250926_232228.json  erpm_calibration_results_20250927_233512.json  erpm_calibration_results_20250928_221041.json  erpm_gain_config.txt  steering_calibration_config.txt  steering_calibration_data_20250926_191611.csv  steering_calibration_data_20250926_231342.csv  steering_calibration_results_20250926_191611.json  steering_calibration_results_20250926_231342.json
data/friction_circle/: friction_circle_test_20250926_191406.csv  friction_circle_test_20250926_233043.csv  friction_circle_test_20250926_233322.csv
docs/: README.md
docs/index/: PACKAGE_REFERENCE.md  PROJECT_INDEX.md  QUICK_REFERENCE.md  README.md  ROS2_INTERFACES.md
docs/technical/: FRICTION_CIRCLE_IMPLEMENTATION.md  (+2 more)
scripts/: README.md  test_urg_connection.sh
src/agent_dawgs/: CMakeLists.txt  OFFLINE_MAPPING_GUIDE.md  README.md  package.xml
src/agent_dawgs/config/: TUNING_PARTICLE_FILTER.md  cartographer_localization_ekf_2d.lua  cartographer_mapping_2d.lua  ekf.yaml  ekf_iahrs.yaml  f1tenth_carto_pure_localization.lua  mapper_params_localization.yaml  mapper_params_online_async_localization.yaml  mapper_params_online_async_mapping_backup.yaml  mapper_params_online_async_sim.yaml  pf_localize.yaml
src/agent_dawgs/config/dawgs/: mapping_vesc.yaml  vehicle.yaml
src/agent_dawgs/launch/: PARTICLE_FILTER_TROUBLESHOOTING.md  cartographer_ekf_launch.py  cartographer_localization_ekf_launch.py  cartographer_localization_pure_launch.py  cartographer_occupancy_grid_ekf_launch.py  cartographer_pure_launch.py  ekf_launch.py  localization_cartographer_ekf.launch.py  localization_cartographer_iahrs.launch.py  localization_cartographer_pure.launch.py  localization_particle_filter.launch.py  localization_slamtoolbox.launch.py  mapping_cartographer_ekf.launch.py  mapping_cartographer_offline.launch.py  mapping_cartographer_pure.launch.py  mapping_slamtoolbox_ekf.launch.py  mapping_slamtoolbox_offline.launch.py  mapping_slamtoolbox_pure.launch.py  sim_localization_particle_filter.launch.py  slam_mapping_launch.py  slammer_dawgified_launch.py  slamtoolbox_ekf_launch.py  slamtoolbox_localization_launch.py  slamtoolbox_pure_launch.py
src/agent_dawgs/launch/archieve/: ekf_iahrs_launch.py  mapping_cartographer_iahrs.launch.py
src/agent_dawgs/rviz/: cartographer_dawgs.rviz  partcle_localization.rviz  particle_localization.rviz  slamtoolbox_ekf.rviz
src/agent_dawgs/scripts/: cartographer_finish_map.sh  initialpose_bridge.py  save_map.py  slamtoolbox_finish_map.sh
src/controller/lqr_path_follower/: CMakeLists.txt  README.md  package.xml
src/controller/lqr_path_follower/config/: lqr_params.yaml
src/controller/lqr_path_follower/include/lqr_path_follower/: lqr_controller.hpp  lqr_path_follower_node.hpp
src/controller/lqr_path_follower/launch/: lqr_follower.launch.py
src/controller/lqr_path_follower/src/: lqr_controller.cpp  lqr_path_follower_node.cpp
src/controller/mpc_path_follower/: CMakeLists.txt  README.md  package.xml
src/controller/mpc_path_follower/config/: mpc_params.yaml
src/controller/mpc_path_follower/include/mpc_path_follower/: mpc_controller.hpp  mpc_path_follower_node.hpp
src/controller/mpc_path_follower/launch/: mpc_follower.launch.py
src/controller/mpc_path_follower/src/: mpc_controller.cpp  mpc_path_follower_node.cpp
src/controller/path_planner/: CMakeLists.txt  CODE_COMMENT.md  PLANNER_TUNING.md  README.md  RVIZ_VISUALIZATION_GUIDE.md  TUNING_FRENET.md  TUNING_FRENET_backup.md  package.xml
src/controller/path_planner/config/: planner.yaml  planner_params.yaml
src/controller/path_planner/include/path_planner/: frenet.hpp  lattice_lut.hpp  occupancy_map.hpp  speed_optimizer.hpp  utils.hpp
src/controller/path_planner/launch/: csv_path_publisher.launch.py  path_planner.launch.py
src/controller/path_planner/src/: csv_path_publisher.cpp  frenet.cpp  lattice_lut.cpp  lattice_lut_backup.cpp  occupancy_map.cpp  path_planner_node.cpp  speed_optimizer.cpp
src/controller/path_planner/src/arch/: frenet_arch.cpp  frenet_arch.cpp.txt
src/controller/path_tracker/: CMakeLists.txt  README.md  TRACKER_TUNING.md  TUNING_GUIDE.md  package.xml
src/controller/path_tracker/config/: .~lock.dawgs_lookup_table.csv#  tracker_params.yaml
src/controller/path_tracker/include/path_tracker/: path_tracker_node.hpp
src/controller/path_tracker/launch/: path_tracker.launch.py
src/controller/path_tracker/script/: visualize_lookup_table.py
src/controller/path_tracker/src/: path_tracker_node.cpp
src/controller/vehicle_calibration/: CMakeLists.txt  README.md  package.xml
src/controller/vehicle_calibration/config/: calibration_params.yaml  vehicle_params.yaml
src/controller/vehicle_calibration/launch/: erpm_calibration.launch.py  friction_circle.launch.py  steering_calibration.launch.py  vehicle_calibration.launch.py
src/controller/vehicle_calibration/scripts/: erpm_calibration.sh  friction_circle.sh  steering_calibration.sh
src/controller/vehicle_calibration/src/: erpm_calibration_node.py  friction_circle_node.py  steering_calibration_node.py
src/utilities/iahrs_driver/: package.xml
src/utilities/iahrs_driver/include/iahrs_driver/: iahrs_driver.hpp
src/utilities/iahrs_driver/launch/: iahrs_driver.launch.py
src/utilities/iahrs_driver/src/: iahrs_driver.cpp  iahrs_tf_publisher.cpp
src/utilities/path_editor/: CMakeLists.txt  README.md  package.xml
src/utilities/path_editor/launch/: path_editor.launch.py
src/utilities/path_editor/path_editor/: __init__.py
src/utilities/path_editor/scripts/: path_editor_node.py
(+330 files in other folders)
