<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agent_dawgs</name>
  <version>0.0.0</version>
  <description>main task for dawgs</description>
  <maintainer email="dallma300@gmail.com">dawgs_nx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>cartographer_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
